# MySideClone

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
docs/: api_contract.md  architecture.md  decisions.md  entities.md  erd.md  requirements.md  vision.md
