[tool.poetry]
name = "mysideclone-backend"
version = "0.1.0"
description = "Backend API for MySideClone MVP - Software Engineering study"
authors = ["Felipe"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0"}
sqlalchemy = ">=2.0.29"
alembic = ">=1.13.1"
pydantic = ">=2.6.4"
pydantic-settings = ">=2.2.1"
psycopg2-binary = ">=2.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
